--- a/Assets/Notes/TODO.txt
+++ b/Assets/Notes/TODO.txt
@@ -1,3 +1,3 @@
-1) #IMPORTANT: Most folders in hieararchy are to be changed (starred repo's design is too complicated)
-2) Will follow a YouTube tutorial on dialogue trees and start from there to build the manager.
-3) Probably need to add an Awake() function for the different initializations of script components later (now only constructors, which don't make sense in a Unity environment) 
+########## URGENT #############
+
+NEED TO JUST INITIALIZE THE TEXTS CORRECTLY AT START.
